--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.15.0",
+    "rsuite": "^5.39.0",
+    "sass": "^1.66.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
