Update the package name and add async indexing to the pdfs.

--- a/ain/requirements.txt
+++ b/ain/requirements.txt
@@ -2,5 +2,6 @@ customtkinter==5.2.1
 darkdetect==0.8.0
 packaging==23.2
 whoosh==2.7.4
-PyMuPDFb==1.23.5
+PyMuPDF==1.23.5
 Pillow==10.1.0
+watchdog==3.0.0
