Adding solution with pywebview

--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
-    "name": "frontend",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "bunx --bun vite",
-        "frontend:dev": "tsc && vite build",
-        "frontend:prod": "tsc && vite build",
-        "build": "bun run frontend:prod",
-        "build:macos": "./.venv/bin/python3 build-macos.py py2app",
-        "build:windows": ".\\.venv\\Scripts\\pyinstaller build-windows.spec",
-        "build:linux": "./.venv/bin/pyinstaller build-linux.spec --onefile",
-        "clean": "run-script-os",
-        "clean:default": "rm -rf ain/frontend/dist 2>/dev/null; rm -rf build 2>/dev/null; rm -rf dist 2>/dev/null; ",
-        "clean:windows": "if exist ain/frontend/dist rd /S /Q ain/frontend/dist & if exist build rd /S /Q build & if exist dist rd /S /Q dist",
-        "init": "bun install && run-script-os",
-        "init:windows": "python3 -m venv .venv && .\\.venv\\Scripts\\pip install -r requirements.txt",
-        "init:linux": "python3 -m venv .venv && if [[ -z \"${KDE_FULL_SESSION}\" ]]; then yarn run init:qt5; else yarn run init:gtk; fi",
-        "init:default": "python3 -m venv .venv && python3 -m venv ./.venv/bin/pip install -r requirements.txt",
-        "init:qt5": "/.venv/bin/pip install pyqt5 pyqtwebengine -r requirements.txt",
-        "init:gtk": "sudo apt install libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev gir1.2-gtk-3.0 && ./.venv/bin/pip/bin/pip install pycairo pygobject -r requirements.txt",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "start": "bun run frontend:dev && run-script-os",
-        "start:windows": ".\\.venv\\Scripts\\python3 ain\\main.py",
-        "start:default": "./.venv/bin/python3 ain/main.py",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.21.3",
-        "rsuite": "^5.51.0"
-    },
-    "devDependencies": {
-        "@types/bun": "^1.0.2",
-        "@types/react": "^18.2.43",
-        "@types/react-dom": "^18.2.17",
-        "@typescript-eslint/eslint-plugin": "^6.14.0",
-        "@typescript-eslint/parser": "^6.14.0",
-        "@vitejs/plugin-react-swc": "^3.5.0",
-        "eslint": "^8.55.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.5",
-        "run-script-os": "^1.1.6",
-        "sass": "^1.70.0",
-        "typescript": "^5.2.2",
-        "vite": "^5.0.8"
-    }
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "bunx --bun vite",
+    "frontend:dev": "tsc && vite build",
+    "frontend:prod": "tsc && vite build",
+    "build": "bun run frontend:prod",
+    "build:macos": "./.venv/bin/python3 build-macos.py py2app",
+    "build:windows": ".\\.venv\\Scripts\\pyinstaller build-windows.spec",
+    "build:linux": "./.venv/bin/pyinstaller build-linux.spec --onefile",
+    "clean": "run-script-os",
+    "clean:default": "rm -rf ain/frontend/dist 2>/dev/null; rm -rf build 2>/dev/null; rm -rf dist 2>/dev/null; ",
+    "clean:windows": "if exist ain/frontend/dist rd /S /Q ain/frontend/dist & if exist build rd /S /Q build & if exist dist rd /S /Q dist",
+    "init": "bun install && run-script-os",
+    "init:windows": "python3 -m venv .venv && .\\.venv\\Scripts\\pip install -r requirements.txt",
+    "init:linux": "python3 -m venv .venv && if [[ -z \"${KDE_FULL_SESSION}\" ]]; then yarn run init:qt5; else yarn run init:gtk; fi",
+    "init:default": "python3 -m venv .venv && python3 -m venv ./.venv/bin/pip install -r requirements.txt",
+    "init:qt5": "/.venv/bin/pip install pyqt5 pyqtwebengine -r requirements.txt",
+    "init:gtk": "sudo apt install libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev gir1.2-gtk-3.0 && ./.venv/bin/pip/bin/pip install pycairo pygobject -r requirements.txt",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "start": "bun run frontend:dev && run-script-os",
+    "start:windows": ".\\.venv\\Scripts\\python3 ain\\main.py",
+    "start:default": "./.venv/bin/python3 ain/main.py",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "pdfjs-dist": "^4.0.379",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
+    "rsuite": "^5.52.0"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.0.2",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "run-script-os": "^1.1.6",
+    "sass": "^1.70.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
+  }
 }
