--- a/package.json
+++ b/package.json
@@ -4,26 +4,29 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bunx --bun vite",
+    "dev": "run-script-os",
+    "dev:macos": "bunx --bun vite",
+    "dev:windows": "vite",
+    "dev:linux": "bunx --bun vite",
     "frontend:dev": "tsc && vite build",
     "frontend:prod": "tsc && vite build",
-    "build": "bun run frontend:prod && run-script-os",
-    "build:macos": "./.venv/bin/python3 build-macos.py py2app",
-    "build:windows": ".\\.venv\\Scripts\\pyinstaller build-windows.spec",
-    "build:linux": "./.venv/bin/pyinstaller build-linux.spec --onefile",
+    "build": "run-script-os",
+    "build:macos": "bun run frontend:prod && ./.venv/bin/python3 build-macos.py py2app",
+    "build:windows": "npm run frontend:prod && .venv\\Scripts\\pyinstaller build-windows.spec",
+    "build:linux": "bun run frontend:prod && ./.venv/bin/pyinstaller build-linux.spec --onefile",
     "clean": "run-script-os",
     "clean:default": "rm -rf ain/frontend/dist 2>/dev/null; rm -rf build 2>/dev/null; rm -rf dist 2>/dev/null; ",
     "clean:windows": "if exist ain/frontend/dist rd /S /Q ain/frontend/dist & if exist build rd /S /Q build & if exist dist rd /S /Q dist",
-    "init": "bun install && run-script-os",
-    "init:windows": "python3 -m venv .venv && .\\.venv\\Scripts\\pip install -r requirements.txt",
-    "init:linux": "python3 -m venv .venv && if [[ -z \"${KDE_FULL_SESSION}\" ]]; then yarn run init:qt5; else yarn run init:gtk; fi",
-    "init:default": "python3 -m venv .venv && python3 -m venv ./.venv/bin/pip install -r requirements.txt",
+    "init": "run-script-os",
+    "init:windows": "npm install && python3 -m venv .venv && .venv\\Scripts\\pip install -r requirements.txt",
+    "init:linux": "bun install && python3 -m venv .venv && if [[ -z \"${KDE_FULL_SESSION}\" ]]; then yarn run init:qt5; else yarn run init:gtk; fi",
+    "init:default": "bun install && python3 -m venv .venv && python3 -m venv ./.venv/bin/pip install -r requirements.txt",
     "init:qt5": "/.venv/bin/pip install pyqt5 pyqtwebengine -r requirements.txt",
     "init:gtk": "sudo apt install libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev gir1.2-gtk-3.0 && ./.venv/bin/pip/bin/pip install pycairo pygobject -r requirements.txt",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "start": "bun run frontend:dev && run-script-os",
-    "start:windows": ".\\.venv\\Scripts\\python3 ain\\main.py",
-    "start:default": "./.venv/bin/python3 ain/main.py",
+    "start": "run-script-os",
+    "start:windows": "npm run frontend:dev && .venv\\Scripts\\python3 ain\\main.py",
+    "start:default": "bun run frontend:dev && ./.venv/bin/python3 ain/main.py",
     "preview": "vite preview"
   },
   "dependencies": {
